--- a/index.html
+++ b/index.html
@@ -10,6 +10,36 @@
     <title>Bootstrap</title>
   </head>
   <body>
+    <!-- nav -->
+    <nav>
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-4 col-sm-6">
+            <a class="text-nav" href="#">START BOOTSTRAP</a>
+          </div>
+          <div class="col-xs-8 col-sm-6">
+            <ul class="menu-nav">
+              <li class="nav-lista"><a href="#">PORTFOLIO</a></li>
+              <li class="nav-lista"><a href="#">ABOUT</a></li>
+              <li class="nav-lista"><a href="#">CONTACT</a></li>
+            </ul>
+
+          </div>
+
+
+        </div>
+
+      </div>
+
+    </nav>
+
+
+    <!-- header -->
+    <header>
+      <div class="container">
+
+      </div>
+    </header>
 
   </body>
 </html>
