--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
           </div>
           <div class="col-xs-8 col-sm-6">
             <ul class="menu-nav">
-              <li class="nav-lista"><a href="#">PORTFOLIO</a></li>
-              <li class="nav-lista"><a href="#">ABOUT</a></li>
-              <li class="nav-lista"><a href="#">CONTACT</a></li>
+              <li class="nav-lista"><a class="text-nav2" href="#">PORTFOLIO</a></li>
+              <li class="nav-lista"><a class="text-nav2" href="#">ABOUT</a></li>
+              <li class="nav-lista"><a class="text-nav2" href="#">CONTACT</a></li>
             </ul>
 
           </div>
@@ -35,8 +35,14 @@
 
 
     <!-- header -->
-    <header>
+    <header class=" position-cent">
       <div class="container">
+        <img class="avatar" src="img/avataaars.svg" alt="">
+        <h1>START BOOTSTRAP</h1>
+
+        <p class="par-header">Graphic Artist - Web Designer - Illustrator</p>
+
+
 
       </div>
     </header>
