--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/all.css">
     <title>Bootstrap</title>
   </head>
   <body>
@@ -39,7 +40,13 @@
       <div class="container">
         <img class="avatar" src="img/avataaars.svg" alt="">
         <h1>START BOOTSTRAP</h1>
-
+        <div class="icone">
+          <div class="icone-line marg-dx"></div>
+          <div class="custom-icon">
+            <i class="fas fa-star"></i>
+          </div>
+          <div class="icone-line marg-sx"></div>
+        </div>
         <p class="par-header">Graphic Artist - Web Designer - Illustrator</p>
 
 
