add section portfolio/about

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/all.css">
     <title>Bootstrap</title>
@@ -53,6 +53,76 @@
 
       </div>
     </header>
+
+    <!-- blocco PORTFOLIO-->
+    <section class="portofolio">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 center">
+            <h2>PORTFOLIO</h2>
+            <div class="icone">
+              <div class="icone-line marg-dx color1"></div>
+              <div class="custom-icon">
+                <i class="fas fa-star color"></i>
+              </div>
+              <div class="icone-line marg-sx color1"></div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4">
+            <img class="img-rounded larghezza" src="img/cabin.png" alt="">
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4">
+            <img class="img-rounded larghezza" src="img/cake.png" alt="">
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4">
+            <img class="img-rounded larghezza" src="img/circus.png" alt="">
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4">
+            <img class="img-rounded larghezza" src="img/game.png" alt="">
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4">
+            <img class="img-rounded larghezza" src="img/safe.png" alt="">
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4">
+            <img class="img-rounded larghezza" src="img/submarine.png" alt="">
+          </div>
+
+
+        </div>
+
+      </div>
+    </section>
+
+
+    <!-- blocco about -->
+    <section class="about">
+      <div class="container misure">
+        <div class="row">
+          <div class="col-xs-12 center">
+            <h2 id="color-white">ABOUT</h2>
+            <div class="icone">
+              <div class="icone-line marg-dx"></div>
+              <div class="custom-icon">
+                <i class="fas fa-star"></i>
+              </div>
+              <div class="icone-line marg-sx"></div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-6">
+            <p class="par-about">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
+          </div>
+          <div class="col-xs-12 col-md-6">
+            <p class="par-about">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
+          </div>
+          <div class="col-xs-12 download-center">
+            <a class="btn btn-default download" href="#" role="button"><i class="fas fa-download mr-2"></i> Free Download!</a>
+          </div>
+
+        </div>
+
+      </div>
+
+    </section>
 
   </body>
 </html>
