add section contact

--- a/index.html
+++ b/index.html
@@ -124,5 +124,48 @@
 
     </section>
 
+    <!-- blocco contact -->
+    <section>
+      <div class="container misure">
+          <div class="row">
+            <div class="col-xs-12 center">
+              <h2>CONTACT</h2>
+              <div class="icone">
+                <div class="icone-line marg-dx color1"></div>
+                <div class="custom-icon">
+                  <i class="fas fa-star color"></i>
+                </div>
+                <div class="icone-line marg-sx color1"></div>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="form-agg" for="exampleInputEmail1">Name</label>
+            <input type="email" class="form-control" id="exampleInputEmail1">
+          </div>
+          <div class="form-group">
+            <label class="form-agg" for="exampleInputEmail1">Email Address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1">
+          </div>
+          <div class="form-group">
+            <label class="form-agg" for="exampleInputEmail1">Phone Number</label>
+            <input type="email" class="form-control" id="exampleInputEmail1">
+          </div>
+          <div class="form-group">
+            <label class="form-agg" for="exampleInputEmail1">Message</label>
+            <input type="email" class="form-control margin-button " id="exampleInputEmail1">
+          </div>
+          <div class="row">
+            <div class="col-xs-12 margin-button">
+              <a class="btn btn-default send" href="#" role="button">Send</a>
+            </div>
+
+          </div>
+
+
+      </div>
+
+    </section>
+
   </body>
 </html>
