--- a/index.html
+++ b/index.html
@@ -29,15 +29,9 @@
                 <li class="nav-lista"><a class="text-nav2" href="#contact">CONTACT</a></li>
               </ul>
             </div>
-
-
           </div>
-
-
         </div>
-
       </div>
-
     </nav>
 
 
@@ -177,44 +171,56 @@
     <!-- footer -->
     <footer>
       <!-- footer sup -->
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-12 col-md-4 foot-cent">
-            <h4>LOCATION</h4>
-            <p class="par-foot">2215 John Daniel Drive <br> Clark, MO 65243</p>
-          </div>
-          <div class="col-xs-12 col-md-4 foot-cent">
-            <h4>AROUND THE WEB</h4>
-            <div class="social">
-              <div class="social-cerchio">
-                <i class="fab fa-fw fa-facebook-f"></i>
-              </div>
-              <div class="social-cerchio">
-                <i class="fab fa-fw fa-twitter"></i>
-              </div>
-              <div class="social-cerchio">
-                <i class="fab fa-fw fa-linkedin-in"></i>
-              </div>
-              <div class="social-cerchio">
-                <i class="fab fa-fw fa-dribbble"></i>
-              </div>
-
-
+      <div class="footer-sup">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-md-4 foot-cent">
+              <h4>LOCATION</h4>
+              <p class="par-foot">2215 John Daniel Drive <br> Clark, MO 65243</p>
             </div>
-          </div>
-          <div class="col-xs-12 col-md-4 foot-cent">
-            <h4>ABOUT FREELANCER</h4>
-            <p class="par-foot">Freelance is a free to use, MIT licensed Bootstrap theme created by <a id="start-boot" href="#">Start Bootstrap</a> .</p>
+            <div class="col-xs-12 col-md-4 foot-cent">
+              <h4>AROUND THE WEB</h4>
+              <div class="social">
+                <div class="social-cerchio">
+                  <i class="fab fa-fw fa-facebook-f"></i>
+                </div>
+                <div class="social-cerchio">
+                  <i class="fab fa-fw fa-twitter"></i>
+                </div>
+                <div class="social-cerchio">
+                  <i class="fab fa-fw fa-linkedin-in"></i>
+                </div>
+                <div class="social-cerchio">
+                  <i class="fab fa-fw fa-dribbble"></i>
+                </div>
+
+
+              </div>
+            </div>
+            <div class="col-xs-12 col-md-4 foot-cent">
+              <h4>ABOUT FREELANCER</h4>
+              <p class="par-foot">Freelance is a free to use, MIT licensed Bootstrap theme created by <a id="start-boot" href="#">Start Bootstrap</a> .</p>
+            </div>
+
           </div>
 
         </div>
-
       </div>
 
 
-
-
       <!-- footer inf -->
+      <div class="copyright">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-xs-12">
+              <span>Pagina realizzata da Andrea Novello</span>
+
+            </div>
+
+          </div>
+
+        </div>
+      </div>
 
 
 
